Fixed off-center loading margin

--- a/css/styles.css
+++ b/css/styles.css
@@ -1298,7 +1298,7 @@ top: 50%;
 z-index: 10;
 width: 50px;
 height: 50px;
-margin: -75px 0 0 -75px;
+margin: -32.5px 0 0 -32.5px;
 border: 8px solid #f3f3f3;
 border-radius: 50%;
 border-top: 8px solid #db3f34;
